Fix too big bottom margin on images

--- a/basics.html
+++ b/basics.html
@@ -52,7 +52,7 @@
     <section class="section-full flex flex-center">
     <div class="container">
         <main>
-            <img class="printhead rounded margin-top margin-bottom" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
+            <img class="printhead rounded margin-top" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
             <article class="margin-top margin-bottom">
                 <h2><span>WHAT </span>is 3D Printing?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
@@ -61,7 +61,7 @@
                 <h2><span>WHICH </span>3D Printers are there?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
-            <img class="orange-print rounded margin-top margin-bottom" src="assets/img/fab-forever-orange-print.webp" alt="this should be an orange print">
+            <img class="orange-print rounded margin-top" src="assets/img/fab-forever-orange-print.webp" alt="this should be an orange print">
             <article class="margin-top margin-bottom">
                 <h2><span>HOW</span> can I use a 3D Printer?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
