Assign padding classes to content section

--- a/basics.html
+++ b/basics.html
@@ -49,7 +49,7 @@
     </section>
 
     <!--CONTENT SECTION START-->
-    <section class="section-full flex flex-center">
+    <section class="section-full flex flex-center section-padding--top section-padding--bottom">
     <div class="container">
         <main>
             <img class="printhead rounded margin-top" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
