--- a/basics.html
+++ b/basics.html
@@ -44,7 +44,9 @@
     <!--HEADER SECTION START-->
     <section class="section-half flex flex-center background">
         <div class="container text-white text-shadow">
+            <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
             <h1><span>BASICS</span> of 3D Printing</h1>
+            <img src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
         </div>
     </section>
 
