Add flex-column class

--- a/basics.html
+++ b/basics.html
@@ -42,7 +42,7 @@
     </header>
 
     <!--HEADER SECTION START-->
-    <section class="section-half flex flex-center background">
+    <section class="section-half flex flex-center flex-column background">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container text-white text-shadow">
             <h1><span>BASICS</span> of 3D Printing</h1>
