Add flip-x and divider-bottom class

--- a/basics.html
+++ b/basics.html
@@ -47,7 +47,7 @@
         <div class="container text-white text-shadow">
             <h1><span>BASICS</span> of 3D Printing</h1>
         </div>
-        <img src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
+        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
     </section>
 
     <!--CONTENT SECTION START-->
