Add basic header structure for rewrite

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
 <body>
     <!--RESPONSIVE HEADER START-->
-    
+    <header>
+        <div>
+            <div></div>
+            <div></div>
+        </div>
+    </header>
     <!--RESPONSIVE HEADER END-->
 
     <!--HERO SECTION START-->
