Add flex classes to header

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
     <!--RESPONSIVE HEADER START-->
-    <header>
-        <div>
-            <div></div>
-            <div></div>
+    <header class="headerbar flex flex-center">
+        <div class="container container-mobile flex flex-center container-mobile--100">
+            <div class="column-2 column-2-mobile "></div>
+            <div class="column-2 column-2-mobile "></div>
         </div>
     </header>
     <!--RESPONSIVE HEADER END-->
