Add nav and links, delete mobile classes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,22 @@
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
-        <div class="container container-mobile flex flex-center container-mobile--100">
-            <div class="column-2 column-2-mobile ">
+        <div class="container flex flex-center">
+            <div class="column-2 column-2-mobile">
                 <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="the logo sends you back to the homepage"><img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
             </div>
-            <div class="column-2 column-2-mobile ">
+            <div class="column-2 column-2-mobile">
                 <nav>
-
+                    <ul>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
+                        aria-label="this link sends you to the basics page"><li>BASICS</li></a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener" target="_blank"
+                        aria-label="this link sends you to the materials page"><li>MATERIALS</li></a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener" target="_blank"
+                        aria-label="this link sends you to the models page"><li>MODELS</li></a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener" target="_blank"
+                        aria-label="this link sends you to the help page"><li>HELP</li></a>
+                    </ul>
                 </nav>
             </div>
         </div>
