Delete unnecessary flex options and mobile classes

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
-        <div class="container flex flex-center">
-            <div class="column-2 column-2-mobile">
+        <div class="container flex">
+            <div class="column-2">
                 <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="the logo sends you back to the homepage"><img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
             </div>
-            <div class="column-2 column-2-mobile">
+            <div class="column-2">
                 <nav>
                     <ul>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
