--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!--RESPONSIVE HEADER START-->
     <header class="headerbar flex flex-center">
-        <div class="container flex">
+        <div class="container flex flex-center--y">
             <div class="column-2">
                 <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="the logo sends you back to the homepage"><img class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
             </div>
