--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="column-2">
                 <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="the logo sends you back to the homepage"><img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
             </div>
-            <div class="column-2 flex flex-end">
+            <div class="column-2 column-2--mobile flex flex-end">
                 <nav>
                     <ul>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
