Change class name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo">
                 </a>
             </div>
-            <div class="column-2 column-2--mobile flex flex-end">
+            <div class="column-2 column-2__nav--mobile flex flex-end">
                 <nav>
                     <ul>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
