--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="headerbar flex flex-center">
         <div class="container container--mobile flex flex-center--y">
             <div class="column-2 column-2__open--mobile">
-                <img class="mobile--close" src="assets/img/bars-solid.svg" alt="this should be an open icon">
+                <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
                 <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="the logo sends you back to the homepage">
                     <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo">
                 </a>
