Add close icon to mobile nav

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </div>
             <div class="column-2 column-2__nav--mobile flex flex-end">
                 <nav>
+                    <img class="mobile--open" src="assets/img/xmark-solid.svg" alt="this should be an open icon">
                     <ul>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
                         aria-label="this link sends you to the basics page"><li>BASICS</li></a>
