--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 </a>
                 <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
             </div>
-            <div class="column-2 column-2__nav--mobile flex flex-end">
+            <div class="column-2 column-2__nav--mobile closed flex flex-end">
                 <nav>
-                    <img class="mobile--open" src="assets/img/xmark-solid.svg" alt="this should be an open icon">
+                    <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be an open icon">
                     <ul>
                         <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
                         aria-label="this link sends you to the basics page"><li>BASICS</li></a>
