Fix error in flex sorting

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="column-2 column-2-mobile flex-order">
                 <h2 class="text-shadow"><span>HOW</span> we help people</h2>
             </div>
-            <div class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-column">
+            <div class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row">
                 <img src="assets/img/testimonial-slider-asian-dude.webp" alt="image of an asian site visitor">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
