--- a/basics.html
+++ b/basics.html
@@ -15,31 +15,32 @@
 
 <body>
     <!--RESPONSIVE HEADER START-->
-    <header>
-        <nav class="headerbar">
-            <div class="headerbar__images">
-                <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the homepage"><img
-                        class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
-                <img class="headerbar__mobile" src="assets/img/bars-solid.svg" aria-label="this opens the mobile menu"
-                    alt="opens the mobile menu">
+    <header class="headerbar flex flex-center">
+        <div class="container container--mobile flex flex-center--y">
+            <div class="column-2 column-2__open--mobile">
+                <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="the logo sends you back to the homepage">
+                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo">
+                </a>
+                <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
             </div>
-            <div class="headerbar__nav closed">
-                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu"
-                    aria-label="close mobile menu">
-                <ul>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
-                            aria-label="this links to the basics page" rel="noopener" target="_blank">BASICS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
-                            aria-label="this links to the materials page" rel="noopener" target="_blank">MATERIALS</a>
-                    </li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html"
-                            aria-label="this links to the models page" rel="noopener" target="_blank">MODELS</a></li>
-                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html"
-                            aria-label="this links to the help page" rel="noopener" target="_blank">HELP</a></li>
-                </ul>
+            <div class="column-2 column-2__nav--mobile closed flex flex-end">
+                <nav>
+                    <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be an open icon">
+                    <ul>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
+                        aria-label="this link sends you to the basics page"><li>BASICS</li></a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener" target="_blank"
+                        aria-label="this link sends you to the materials page"><li>MATERIALS</li></a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener" target="_blank"
+                        aria-label="this link sends you to the models page"><li>MODELS</li></a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener" target="_blank"
+                        aria-label="this link sends you to the help page"><li>HELP</li></a>
+                    </ul>
+                </nav>
             </div>
-        </nav>
+        </div>
     </header>
+    <!--RESPONSIVE HEADER END-->
 
     <!--HEADER SECTION START-->
     <section class="section-half flex flex-center flex-column flex-between background">
