--- a/basics.html
+++ b/basics.html
@@ -53,9 +53,14 @@
 
     <!--CONTENT SECTION START-->
     <section class="section-full flex flex-center section-padding--bottom">
-    <div class="container">
+    <div class="container container--mobile flex flex-column--mobile">
         <main>
-            <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
+            <picture>
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
+            </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>WHAT </span>is 3D Printing?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
@@ -64,7 +69,12 @@
                 <h2 class="margin-bottom--s"><span>WHICH </span>3D Printers are there?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
-            <img class="orange-print rounded margin-top--l" src="assets/img/fab-forever-orange-print.webp" alt="this should be an orange print">
+            <picture>
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-orange-print.webp" alt="this should be a printhead">
+            </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>HOW</span> can I use a 3D Printer?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
