--- a/basics.html
+++ b/basics.html
@@ -90,12 +90,12 @@
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
-        <div class="container container-xs flex flex-center">
-            <div class="column-2 column-2-xs">
+        <div class="container container-mobile flex flex-center">
+            <div class="column-2 column-2-mobile">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
-            <div class="column-2 column-2-xs flex">
+            <div class="column-2 column-2-mobile flex">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
