Assign hide class

--- a/basics.html
+++ b/basics.html
@@ -91,7 +91,7 @@
     <!--FOOTER START-->
     <footer class="flex flex-center">
         <div class="container container-mobile flex flex-center">
-            <div class="column-2 column-2-mobile">
+            <div class="column-2 column-2-mobile hide">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
