--- a/basics.html
+++ b/basics.html
@@ -95,7 +95,7 @@
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
-            <div class="column-2 column-2-mobile flex">
+            <div class="column-2 column-2-mobile flex flex-center">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
