--- a/basics.html
+++ b/basics.html
@@ -52,8 +52,8 @@
     </section>
 
     <!--CONTENT SECTION START-->
-    <section class="section-full flex flex-center section-padding--bottom">
-    <div class="container container--mobile flex flex-column--mobile">
+    <section class="section-full section-padding--bottom flex flex-center">
+    <div class="container container--mobile">
         <main>
             <picture>
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
