Assign flex center class for mobile L

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h2><span>GOT</span> questions?</h2>
                 <p class="column-2__text">Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
-            <div class="column-2 column-2-mobile flex flex-end">
+            <div class="column-2 column-2-mobile flex flex-end flex-center--mobile">
                 <div class="form-wrapper flex flex-column box-shadow">
                     <h3 class="text-center">Lets stay in contact!</h3>
                     <label for="fname">Your first name <span class="red-star">*</span></label>
