Add flow diagram to content

--- a/basics.html
+++ b/basics.html
@@ -78,8 +78,15 @@
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>HOW</span> can I use a 3D Printer?</h2>
-                <p>Using a 3d printer is only part of the complete process. To give you an overview we xompiled together a nice flow diagram for you: CAD -> SLICER -> PRINTER
+                <p>
+                    Using a 3d printer is only part of the complete process. To give you an overview we compiled together a nice flow diagram for you:
                 </p>
+                <div class="picture-wrapper">
+                    <picture>
+                        <!--<source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">-->
+                        <img src="assets/img/fab-forever-3d-print-process.png" alt="this should be a flow diagram">
+                    </picture>
+                </div>
             </article>
             <article>
                 <h2 class="margin-bottom--s"><span>CAN</span> I build my own?</h2>
