Update srcset declaration for diagram image

--- a/basics.html
+++ b/basics.html
@@ -83,7 +83,7 @@
                 </p>
                 <div class="picture-wrapper">
                     <picture>
-                        <!--<source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">-->
+                        <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
                         <img src="assets/img/fab-forever-3d-print-process.png" alt="this should be a flow diagram">
                     </picture>
                 </div>
